# icpsofutter

./: .gitignore  README.md  allfileshas.txt  gradlew  l10n.yaml  main.cpp  pubspec.yaml
android/: build.gradle  build_native_log.txt  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  p2pInterface.h  p2p_video_jni.cpp
android/app/src/main/java/com/example/music_app_framework/: MainActivity.java
android/app/src/main/kotlin/com/example/music_app_framework/: MainActivity.kt  P2pVideoView.kt  P2pVideoViewFactory.kt
android/app/src/main/kotlin/com/mainipc/xiebaoxin/: CameraH264Streamer.kt  CameraPreviewView.kt  H264Decoder.kt  MainActivity.kt  P2pTexturePlugin.kt  P2pVideoView.kt  YuvUtils.kt
android/app/src/main/res/values/: strings.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/api/: auth_interceptor.dart  dio_client.dart
lib/auth/: auth_provider.dart
lib/gen_l10n/: app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart
lib/l10n/: app_en.arb  app_zh.arb
lib/models/: user.dart
lib/pages/: cloud_storage_page.dart  device_settings_page.dart  home_page.dart  login_page.dart  onboarding_page.dart  p2p_video_main_page.dart  p2p_video_page.dart  p2p_video_simple_page.dart  p2p_video_test_page.dart  privacy_policy_page.dart  profile_page.dart  root_page.dart  settings_page.dart  test_update_page.dart  video_main_page.dart  wifi_config_page.dart
lib/providers/: device_event_notifier.dart  message_monitor.dart  theme_provider.dart
lib/services/: app_lifecycle_service.dart  app_update_service.dart  mqtt_service.dart  wifi_config_service.dart
lib/utils/: app_router.dart  app_routes.dart
lib/widgets/: app_update_dialog.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
